increased size of project element and reduced sliderControl width on smaller displays to prevent element from overlapping jumpToSectionArrow

--- a/src/containers/ProjectSlider/Project/Project.module.css
+++ b/src/containers/ProjectSlider/Project/Project.module.css
@@ -139,6 +139,12 @@
   }
 }
 
+@media (max-width: 450px) {
+  .Project {
+    padding: 0 5% 0 5%;
+  }
+}
+
 @media (max-width: 360px) {
   .Project {
     padding: 0 2% 0 2%;
